tests/baselines/reference/parserIndexSignature6.errors.txt
tests/cases/conformance/parser/ecmascript5/IndexSignatures/parserIndexSignature6.ts(2,4): error TS1023: An index signature parameter type must be 'string' or 'number'.


==== tests/cases/conformance/parser/ecmascript5/IndexSignatures/parserIndexSignature6.ts (1 errors) ====
    interface I {
      [a:boolean]
       ~
!!! error TS1023: An index signature parameter type must be 'string' or 'number'.
    }